<resources>
    <string name="app_name">Plantz</string>
    <string name="nicholas_pilkington">Nicholas Pilkington</string>
    <string name="gregory_evans">Gregory Evans</string>
    <string name="manuel_bolanos">Manuel Bolanos</string>
    <string name="ist_422_mobile_programming">IST-422-Mobile Programming</string>
    <string name="app_developers">App Developers:</string>
    <string name="ethan_flores">Ethan Flores</string>


    <string-array name="State">
        <item>AK</item>
        <item>AL</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string-array name="plants">
        <item>sunflower</item>
        <item>spiderwort</item>
        <item>pocket plant</item>
        <item>stachys</item>
        <item>striped bletilla</item>
        <item>coreopsis</item>
        <item>daylily golden prize</item>
    </string-array>


</resources>
